@@ -464,7 +464,9 @@ This pseudo-type depends on SoX having been built with optional
 libsndfile support.
 .TP
 .B .sndt
-SoundTool files. This is an older DOS file format.
+Sndtool files.
+This format dates from the MS-DOS era.
+Bizarrely, this file type can also be used to read Sounder files.
 .TP
 .B .sou
 An alias for the
